--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ahooks": "^3.5.1",
     "antd": "^4.21.4",
     "babel-plugin-import": "^1.13.5",
+    "jotai": "^1.7.3",
     "next": "12.2.0",
     "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
